Added the +1 Like button to the directives, index.html and changed the directive template.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
     <!-- Directives -->
     <script src="js/directives/feedsterPost.js"></script>
+    <script src="js/directives/plusOne.js"></script>
     
   </body>
 </html>
