--- a/js/directives/feedsterPost.html
+++ b/js/directives/feedsterPost.html
@@ -3,4 +3,5 @@
   <h3 class="author-name"> {{ prop.author.name }}</h3>
   <p class="comment-text">{{ prop.comment.text }} </p>
   <img class="comment-img" ng-src="{{ prop.comment.img }}">
+  <plus-one></plus-one>
 </div>
